samples/_failures_safe/1761390789_3b5a70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06d4f048.c: In function ‘main’:
./samples/SAFE/__tmp_06d4f048.c:157:5: error: expected declaration or statement at end of input
  157 |     if (product.data != NULL) {
      |     ^~
./samples/SAFE/__tmp_06d4f048.c:157:5: error: expected declaration or statement at end of input
